--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,6 +11,30 @@
         #{get 'moreScripts' /}
     </head>
     <body>
-        #{doLayout /}
+        <div id="header">
+            <div id="logo">
+                Trombine
+            </div>
+            <ul id="tools">
+                <li>
+                    <a href="#">Log in to write something</a>
+                </li>
+            </ul>
+            <div id="title">
+                <span class="about">About this blog</span>
+                <h1><a href="#">${trombineTitle}</a></h1>
+                <h2>${trombineBaseline}</h2>
+            </div>
+        </div>
+        
+        <div id="main">
+            #{doLayout /} 
+        </div>
+        
+        <p id="footer">
+            Trombine is a (not that) powerful trombinoscope built with the 
+            <a href="http://www.playframework.org">Play framework</a>
+            as a tutorial application.
+        </p>
     </body>
 </html>
