--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,7 +22,7 @@
             </ul>
             <div id="title">
                 <span class="about">About this blog</span>
-                <h1><a href="#">${trombineTitle}</a></h1>
+                <h1><a href="@{Application.index()}">${trombineTitle}</a></h1>
                 <h2>${trombineBaseline}</h2>
             </div>
         </div>
