--- a/app/views/tags/display.html
+++ b/app/views/tags/display.html
@@ -9,4 +9,8 @@
   </span>
   <span class="person-orga">
     Member of ${_person.organization.name}
+  </span>
+  <span class="person-details">
+    <a href="@{Application.showPerson(_person.id)}">See more...</a>
+  </span>
 </div>
